refatoração para melhorar o fluxo e garantir o baixo acoplamento melhorias nos testes